Task #3330: Fix alignment of service icons on service pages

--- a/_assets/styles/scss/05-regions/_service-icons.scss
+++ b/_assets/styles/scss/05-regions/_service-icons.scss
@@ -51,20 +51,27 @@ category: Regions
 */
 
 .region.region--service-icons {
-  align-items: center;
+  align-content: flex-start;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   padding-bottom: $base-spacing * 1.5;
   padding-top: $base-spacing * 1.5;
+  width: 100%;
 
   > div {
+    align-content: center;
+    display: flex;
+    flex: 1;
     flex-basis: 50%;
+    justify-content: flex-start;
     margin: $base-spacing / 2 0;
+    width: 50%;
 
     @include grid-media($medium-screen-up) {
       flex-basis: 25%;
       margin: 0;
+      width: 25%;
     }
   }
 }
